# GitTracer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  format.sh  pyproject.toml
docs/: TODO.md
docs/logs/: command-log.md
docs/plans/: 2025-02-04-ai-analysis-module.md  2025-02-04-frontend-dash-app.md
frontend/: app.py  git_cmd.py
frontend/callbacks/: __init__.py  navigation_callbacks.py  repo_callbacks.py  trajectory_callbacks.py
frontend/layouts/: main_layout.py
frontend/layouts/components/: __init__.py  commit_detail.py  commit_table.py  repo_config.py  trajectory_view.py
frontend/styles/: __init__.py  sketch_style.css
tests/frontend/: test_components.py  test_styles.py
